feat: Implement Anki collection persistence for models, decks, notes, and cards using Hibernate ORM with PostgreSQL.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 quarkus.http.port=8088
 quarkus.devservices.enabled=false
+# Database Configuration
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=powercards
+quarkus.datasource.password=powercards
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/powercards
+quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.log.sql=true
