--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-h2</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.github.victobonetti</groupId>
             <artifactId>quarkus-anki4j</artifactId>
             <version>1.0.0-SNAPSHOT</version>
