--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ quarkus.datasource.password=powercards
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/powercards
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
+# Test Configuration
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+%test.quarkus.hibernate-orm.database.generation=drop-and-create
+%test.quarkus.http.test-port=8091
