--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 quarkus.http.port=8088
-quarkus.devservices.enabled=false
+quarkus.devservices.enabled=true
 # Database Configuration
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=powercards
-quarkus.datasource.password=powercards
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/powercards
+# quarkus.datasource.username=powercards
+# quarkus.datasource.password=powercards
+# quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/powercards
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
 # Test Configuration
@@ -12,3 +12,6 @@ quarkus.hibernate-orm.log.sql=true
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 %test.quarkus.hibernate-orm.database.generation=drop-and-create
 %test.quarkus.http.test-port=8091
+# OpenAPI Configuration
+quarkus.smallrye-openapi.store-schema-directory=src/main/resources
+quarkus.smallrye-openapi.filename=openapi
