feat: Implement Note and Deck CRUD functionality, refactor OpenAPI client generation, and integrate new UI components.

--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
                 <configuration>
                     <inputSpec>${project.basedir}/src/main/resources/openapi.yaml</inputSpec>
                     <generatorName>typescript-axios</generatorName>
-                    <output>${project.basedir}/generated/frontend</output>
+                    <output>${project.basedir}/frontend/src/api</output>
                     <configOptions>
                         <typescriptThreePlus>true</typescriptThreePlus>
                         <supportsES6>true</supportsES6>
