--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 quarkus.http.port=8088
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=http://localhost:5173
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.headers=accept,content-type,authorization
+quarkus.http.cors.access-control-allow-credentials=true
 quarkus.devservices.enabled=true
 # Database Configuration
 quarkus.datasource.db-kind=postgresql
