--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ quarkus.hibernate-orm.log.sql=true
 # OpenAPI Configuration
 quarkus.smallrye-openapi.store-schema-directory=src/main/resources
 quarkus.smallrye-openapi.filename=openapi
+# MinIO Configuration
+quarkus.minio.url=http://localhost:9000
+quarkus.minio.access-key=minioadmin
+quarkus.minio.secret-key=minioadmin
+%dev.quarkus.minio.url=http://localhost:9000
+%dev.quarkus.minio.access-key=minioadmin
+%dev.quarkus.minio.secret-key=minioadmin
