--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,18 +5,22 @@ quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
 quarkus.http.cors.headers=accept,content-type,authorization
 quarkus.http.cors.access-control-allow-credentials=true
 quarkus.devservices.enabled=true
+# Docker Compose Configuration
+quarkus.compose.devservices.files=docker-compose.yaml
 # Database Configuration
 quarkus.datasource.db-kind=postgresql
-# quarkus.datasource.username=powercards
-# quarkus.datasource.password=powercards
-# quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/powercards
+quarkus.datasource.username=powercards
+quarkus.datasource.password=powercards
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/powercards
 quarkus.hibernate-orm.database.generation=update
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
 # Test Configuration
 %test.quarkus.datasource.db-kind=h2
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 %test.quarkus.hibernate-orm.database.generation=drop-and-create
 %test.quarkus.http.test-port=8091
+%test.quarkus.minio.devservices.enabled=false
+%test.quarkus.compose.devservices.enabled=false
 # OpenAPI Configuration
 quarkus.smallrye-openapi.store-schema-directory=src/main/resources
 quarkus.smallrye-openapi.filename=openapi
@@ -24,6 +28,10 @@ quarkus.smallrye-openapi.filename=openapi
 quarkus.minio.url=http://localhost:9000
 quarkus.minio.access-key=minioadmin
 quarkus.minio.secret-key=minioadmin
+quarkus.minio.devservices.enabled=false
+quarkus.minio.secure=false
 %dev.quarkus.minio.url=http://localhost:9000
 %dev.quarkus.minio.access-key=minioadmin
 %dev.quarkus.minio.secret-key=minioadmin
+%dev.quarkus.minio.devservices.enabled=false
+%dev.quarkus.minio.secure=false
