--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,14 @@ services:
     depends_on:
       - db
 
+  ollama:
+    image: ollama/ollama:latest
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+
 volumes:
   minio_data:
   postgres_data:
+  ollama_data:
