--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,13 +35,14 @@ quarkus.minio.secure=false
 %dev.quarkus.minio.secret-key=minioadmin
 %dev.quarkus.minio.devservices.enabled=false
 %dev.quarkus.minio.secure=false
-
 # quarkus.anki4j.max-pkg-size-kb=20000
-
 # Sets the maximum size for the entire request body to 50MB
 quarkus.http.limits.max-body-size=50M
-
 # Sets the maximum size for a single form attribute (file) to 50MB
 quarkus.http.limits.max-form-attribute-size=50M
 # .env file
 ANKI4J_MAX_PKG_SIZE_KB=20000
+# AI Configuration
+quarkus.langchain4j.ollama.base-url=http://localhost:11434
+quarkus.langchain4j.ollama.chat-model.model-id=llama3.2
+quarkus.langchain4j.ollama.timeout=60s
