feat: Introduce AI agent tools for application data interaction and version AI chat endpoint to /v1.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
   ollama:
     build:
       context: .
-      dockerfile: Dockerfile.ollama
+      dockerfile: Dockerfile.function-gemma
     image: powercards-ollama
     ports:
       - "11434:11434"
