--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,5 +44,6 @@ quarkus.http.limits.max-form-attribute-size=50M
 ANKI4J_MAX_PKG_SIZE_KB=20000
 # AI Configuration
 quarkus.langchain4j.ollama.base-url=http://localhost:11434
-quarkus.langchain4j.ollama.chat-model.model-id=llama3.2
+quarkus.langchain4j.ollama.chat-model.model-id=functiongemma:270m
 quarkus.langchain4j.ollama.timeout=60s
+%test.quarkus.langchain4j.ollama.devservices.enabled=false
