--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,15 @@ services:
     volumes:
       - ollama_data:/root/.ollama
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.1
+    ports:
+      - "8081:8080"
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    command: start-dev
+
 volumes:
   minio_data:
   postgres_data:
