--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,11 +47,13 @@ quarkus.langchain4j.ollama.base-url=http://localhost:11434
 quarkus.langchain4j.ollama.chat-model.model-id=functiongemma:270m
 quarkus.langchain4j.ollama.timeout=60s
 %test.quarkus.langchain4j.ollama.devservices.enabled=false
+
 # OIDC Configuration
 quarkus.oidc.auth-server-url=http://localhost:8081/realms/powercards
-quarkus.oidc.client-id=powercards-backend
-quarkus.oidc.credentials.secret=secret
-quarkus.oidc.application-type=service
+quarkus.oidc.client-id=cli-web-pwc
+# quarkus.oidc.credentials.secret=secret
+# quarkus.oidc.application-type=service
+
 quarkus.http.auth.permission.authenticated.paths=/*
 quarkus.http.auth.permission.authenticated.policy=authenticated
 quarkus.http.auth.permission.public.paths=/q/*,/health,/v1/anki/upload
