--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,11 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "marked": "^17.0.1",
+    "oidc-client-ts": "^3.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-oidc-context": "^3.3.0",
     "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
