--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,14 +47,21 @@ quarkus.langchain4j.ollama.base-url=http://localhost:11434
 quarkus.langchain4j.ollama.chat-model.model-id=functiongemma:270m
 quarkus.langchain4j.ollama.timeout=60s
 %test.quarkus.langchain4j.ollama.devservices.enabled=false
-
 # OIDC Configuration
 quarkus.oidc.auth-server-url=http://localhost:8081/realms/powercards
 quarkus.oidc.client-id=cli-web-pwc
 # quarkus.oidc.credentials.secret=secret
 # quarkus.oidc.application-type=service
-
-quarkus.http.auth.permission.authenticated.paths=/*
-quarkus.http.auth.permission.authenticated.policy=authenticated
-quarkus.http.auth.permission.public.paths=/q/*,/health,/v1/anki/upload
-quarkus.http.auth.permission.public.policy=permit
+# Keycloak Admin Client Configuration
+quarkus.keycloak.admin-client.server-url=http://localhost:8081
+quarkus.keycloak.admin-client.realm=master
+quarkus.keycloak.admin-client.client-id=admin-cli
+quarkus.keycloak.admin-client.username=admin
+quarkus.keycloak.admin-client.password=admin
+quarkus.keycloak.admin-client.grant-type=password
+powercards.keycloak.target-realm=powercards
+quarkus.rest-client.keycloak-token-api.url=http://localhost:8081
+quarkus.http.auth.permission.1.paths=/q/*,/health,/v1/anki/upload,/v1/auth/register,/v1/auth/login,/v1/auth/refresh
+quarkus.http.auth.permission.1.policy=permit
+quarkus.http.auth.permission.2.paths=/*
+quarkus.http.auth.permission.2.policy=authenticated
