--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,8 +44,24 @@ quarkus.http.limits.max-form-attribute-size=50M
 ANKI4J_MAX_PKG_SIZE_KB=20000
 # AI Configuration
 quarkus.langchain4j.ollama.base-url=http://localhost:11434
-quarkus.langchain4j.ollama.chat-model.model-id=functiongemma:270m
+
+# --- Modelo A: O generalista ---
+quarkus.langchain4j.ollama.generalista.base-url=http://localhost:11434
+quarkus.langchain4j.ollama.generalista.chat-model.model-id=llama3.2:1b
+quarkus.langchain4j.ollama.generalista.chat-model.temperature=0.3
+
+# Aumente o timeout usando esta chave específica:
+quarkus.langchain4j.ollama.generalista.timeout=30s
+
+# --- Modelo B: O especialista em funções (seu Gemma 270m) ---
+quarkus.langchain4j.ollama.funcao.base-url=http://localhost:11434
+quarkus.langchain4j.ollama.funcao.chat-model.model-id=functiongemma:270m
+quarkus.langchain4j.ollama.funcao.chat-model.temperature=0.0
+
 quarkus.langchain4j.ollama.timeout=60s
+quarkus.langchain4j.log-requests=true
+quarkus.langchain4j.log-responses=true
+
 %test.quarkus.langchain4j.ollama.devservices.enabled=false
 # OIDC Configuration
 quarkus.oidc.auth-server-url=http://localhost:8081/realms/powercards
