feat: Implement user-configurable AI provider and API key management within user profiles, including secure storage and frontend integration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,24 +44,19 @@ quarkus.http.limits.max-form-attribute-size=50M
 ANKI4J_MAX_PKG_SIZE_KB=20000
 # AI Configuration
 quarkus.langchain4j.ollama.base-url=http://localhost:11434
-
 # --- Modelo A: O generalista ---
 quarkus.langchain4j.ollama.generalista.base-url=http://localhost:11434
-quarkus.langchain4j.ollama.generalista.chat-model.model-id=llama3.2:1b
-quarkus.langchain4j.ollama.generalista.chat-model.temperature=0.3
-
+quarkus.langchain4j.ollama.generalista.chat-model.model-id=mistral:7b
+quarkus.langchain4j.ollama.generalista.chat-model.temperature=0.1
 # Aumente o timeout usando esta chave específica:
 quarkus.langchain4j.ollama.generalista.timeout=30s
-
 # --- Modelo B: O especialista em funções (seu Gemma 270m) ---
 quarkus.langchain4j.ollama.funcao.base-url=http://localhost:11434
 quarkus.langchain4j.ollama.funcao.chat-model.model-id=functiongemma:270m
 quarkus.langchain4j.ollama.funcao.chat-model.temperature=0.0
-
 quarkus.langchain4j.ollama.timeout=60s
 quarkus.langchain4j.log-requests=true
 quarkus.langchain4j.log-responses=true
-
 %test.quarkus.langchain4j.ollama.devservices.enabled=false
 # OIDC Configuration
 quarkus.oidc.auth-server-url=http://localhost:8081/realms/powercards
@@ -81,3 +76,5 @@ quarkus.http.auth.permission.1.paths=/q/*,/health,/v1/anki/upload,/v1/auth/regis
 quarkus.http.auth.permission.1.policy=permit
 quarkus.http.auth.permission.2.paths=/*
 quarkus.http.auth.permission.2.policy=authenticated
+# Debug logging for Keycloak client
+# quarkus.log.category."org.apache.http.wire".level=DEBUG
