--- a/Dockerfile.function-gemma
+++ b/Dockerfile.function-gemma
@@ -1,3 +1,3 @@
 FROM ollama/ollama:latest
 
-RUN ollama serve & sleep 5 && ollama pull functiongemma:270m && ollama pull llama3.2:1b
+RUN ollama serve & sleep 5 && ollama pull functiongemma:270m
