feat: Implement user-specific dark mode preference with new UI components and backend integration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,13 +44,10 @@ quarkus.http.limits.max-form-attribute-size=50M
 ANKI4J_MAX_PKG_SIZE_KB=20000
 # AI Configuration
 quarkus.langchain4j.ollama.base-url=http://localhost:11434
-# --- Modelo A: O generalista ---
-quarkus.langchain4j.ollama.generalista.base-url=http://localhost:11434
-quarkus.langchain4j.ollama.generalista.chat-model.model-id=mistral:7b
-quarkus.langchain4j.ollama.generalista.chat-model.temperature=0.1
 # Aumente o timeout usando esta chave específica:
 quarkus.langchain4j.ollama.generalista.timeout=30s
-# --- Modelo B: O especialista em funções (seu Gemma 270m) ---
+
+# --- O especialista em funções ---
 quarkus.langchain4j.ollama.funcao.base-url=http://localhost:11434
 quarkus.langchain4j.ollama.funcao.chat-model.model-id=functiongemma:270m
 quarkus.langchain4j.ollama.funcao.chat-model.temperature=0.0
