feat: Integrate HashiCorp Vault for AI API key management, replacing Keycloak for this functionality.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,9 +24,8 @@ services:
 
   adminer:
     image: adminer
-    restart: always
     ports:
-      - "8080:8080"
+      - "8082:8080"
     depends_on:
       - db
 
@@ -39,6 +38,14 @@ services:
       - "11434:11434"
     volumes:
       - ollama_data:/root/.ollama
+
+  vault:
+    image: hashicorp/vault:1.13.3
+    ports:
+      - "8200:8200"
+    environment:
+      VAULT_DEV_ROOT_TOKEN_ID: myroot
+      VAULT_DEV_LISTEN_ADDRESS: 0.0.0.0:8200
 
 volumes:
   minio_data:
