--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,7 +46,6 @@ ANKI4J_MAX_PKG_SIZE_KB=20000
 quarkus.langchain4j.ollama.base-url=http://localhost:11434
 # Aumente o timeout usando esta chave específica:
 quarkus.langchain4j.ollama.generalista.timeout=30s
-
 # --- O especialista em funções ---
 quarkus.langchain4j.ollama.funcao.base-url=http://localhost:11434
 quarkus.langchain4j.ollama.funcao.chat-model.model-id=functiongemma:270m
@@ -75,3 +74,7 @@ quarkus.http.auth.permission.2.paths=/*
 quarkus.http.auth.permission.2.policy=authenticated
 # Debug logging for Keycloak client
 # quarkus.log.category."org.apache.http.wire".level=DEBUG
+# Vault Configuration
+quarkus.vault.url=http://localhost:8200
+quarkus.vault.authentication.client-token=myroot
+quarkus.vault.kv-secret-engine-mount-path=secret
